# redactor

./: .gitignore  .instructions.md  LICENSE  README.md  TESTING.md  pyproject.toml  redact-config.example.json  redactor-rules.base.yaml  redactor.py  test_redactor.py
examples/: input.json
