[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redactor"
version = "0.2.0"
description = "Config-driven PII redactor for JSON and plaintext operational files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "LogicWizards.NYC", email = "joe@logicwizards.nyc"}
]
keywords = ["pii", "redaction", "privacy", "gdpr", "json", "sanitization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Text Processing :: Filters",
]

[project.urls]
Homepage = "https://github.com/wwwizards/redactor"
Repository = "https://github.com/wwwizards/redactor"
Issues = "https://github.com/wwwizards/redactor/issues"

[project.scripts]
redactor = "redactor:main"

[tool.setuptools]
py-modules = ["redactor"]

[tool.setuptools.package-data]
redactor = ["redact-config.example.json"]
